--- a/Project3-Client/package.json
+++ b/Project3-Client/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
+    "react-numeric-input":"^2.2.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
