--- a/Project3-Client/package.json
+++ b/Project3-Client/package.json
@@ -12,7 +12,10 @@
     "react-router-dom": "^6.1.1",
     "react-scripts": "^5.0.0",
     "react-numeric-input":"^2.2.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "multer":"1.4.4",
+    "multer-storage-cloudinary": "^4.0.0",
+    "cloudinary": "^1.28.1"
   },
   "scripts": {
     "start": "react-scripts start",
