--- a/Project3-Client/package.json
+++ b/Project3-Client/package.json
@@ -7,16 +7,16 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.3",
+    "cloudinary": "^1.28.1",
+    "multer": "1.4.4",
+    "multer-storage-cloudinary": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-numeric-input": "^2.2.3",
     "react-router-dom": "^6.1.1",
     "react-scripts": "^5.0.0",
-    "react-numeric-input":"^2.2.3",
-    "web-vitals": "^1.0.1",
-    "multer":"1.4.4",
-    "multer-storage-cloudinary": "^4.0.0",
-    "cloudinary": "^1.28.1"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
