--- a/Project3-Server/package.json
+++ b/Project3-Server/package.json
@@ -15,8 +15,8 @@
     "express-jwt": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.2",
-    "morgan": "^1.10.0"
-  
+    "morgan": "^1.10.0",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
