--- a/Project3-Client/package.json
+++ b/Project3-Client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.27",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,12 +11,14 @@
     "cloudinary": "^1.28.1",
     "multer": "1.4.4",
     "multer-storage-cloudinary": "^4.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-google-maps": "^9.4.5",
     "react-numeric-input": "^2.2.3",
     "react-router-dom": "^6.1.1",
     "react-scripts": "^5.0.0",
     "socket.io-client": "^4.4.1",
+    "use-deep-compare-effect": "^1.8.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
