--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "project-management-server-server",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "16.x",
+    "npm": "^8"
+  },
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
