--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "project-management-client",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.x",
+    "npm": "^8"
+  },
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.27",
     "@testing-library/jest-dom": "^5.11.4",
