--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.3",
     "cloudinary": "^1.28.1",
     "multer": "1.4.4",
     "multer-storage-cloudinary": "^4.0.0",
     "react": "^16.0.0",
+    "react-bootstrap": "^2.2.1",
     "react-dom": "^16.0.0",
-    "react-google-maps": "^9.4.5",
     "react-numeric-input": "^2.2.3",
     "react-router-dom": "^6.1.1",
     "react-scripts": "^5.0.0",
